@@ -4,3 +4,4 @@
 09 Improved & Safer Number Key Invite System - Tue 23 Mar 2010 08:02:34 AM EET - http://bit.ly/dbU6xm
 Attempting to remove search cloud
 09 Forum/Upload/Download/Immunity/Shoutbox/Leechwarn With Duration - Tue 23 Mar 2010 08:55:07 PM EET - http://bit.ly/aGOlfi
+Invite a friend added - Tue 23 Mar 2010 10:31:18 PM EET
